Fixed menu being behind content and made menu color darker

--- a/css/menu.css
+++ b/css/menu.css
@@ -24,6 +24,7 @@
 .header-menu {
     position:fixed;
     top: 0;
+    z-index: 10;
     width: var(--menu-width);
     height: var(--menu-height);
     margin: auto;
